--- a/_driverList2.html
+++ b/_driverList2.html
@@ -20,9 +20,12 @@
                     <div class="driver-footer">
                         <div id="_driver_footerInfo">
                             <div id="_driver_numItems"></div>
-                            <button id="_driver_submit_list" type="button" class="btn btn-link">
-                                submit
-                            </button>
+                            <div class="text-center">
+                                <button id="_driver_submit_list" type="button" class="btn btn-link">
+                                    submit
+                                </button>
+                            </div>
+
                         </div>
                     </div>
                 </div>
