--- a/_congrats_driver_finish_shopping.html
+++ b/_congrats_driver_finish_shopping.html
@@ -5,8 +5,9 @@
         <div class="col-xs-12">
             <h2> Congratulations!</h2>
             <p>
-                We posted your ticket, and you will be notified as soon as it's accepted!
+                Success! Your customer will be notified soon!
             </p>
+            <button type="button" class = "btn btn-link" onclick="goToPage('_yourDeliveries')" id="congrats_go_to_yourDeliveries">Go To Your Deliveries</button>
         </div>
     </div>
 </div>
