--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
     }
 
 
+    function loadPage(pageName, row, column) {
+        $.ajax({
+            type: "POST",
+            url: "/loadPage",
+            data: {name: pageName},
+            async: false,
+            success: function (data) {
+                $('#section-' + row).append("<div id='" + pageName +
+                        "' data-x='" + column + "' data-y='" + row + "'>" + data + "</div>");
+            }
+        });
+    }
+
+
+
+
     /*
      TODO:
      Each page MUST specify function to send/received data, or null
@@ -273,22 +289,20 @@
                 }
 
             });
-        },
+        }
+
+        ,
         login: function (data) { //Called after successful login, passing the returned data
             document.cookie = "user=" + data.userId + ";expires=" + new Date().setUTCFullYear(2345).toUTCString();
 
 
-            loader.userId = data.userId;
+            //TODO
+            //notdone
+            alert(data);
+            document.getElementById("index_user-name").innerHTML = data.full_name;
 
 
-            //If already logged in, Simply reload page to use init to get the data
-            if (data.isLoggedIn) {
-                window.location.reload();
-            }
-            //Otherwise keep as is and go back
-            else {
-                goToPreviousPage();
-            }
+            goToPreviousPage();
         }
         ,
         logout: function () {
@@ -347,15 +361,20 @@
         else {
             loader.userId = "";
         }
+        //TODO: if is driver in cookie, take to driver page instead
 
 
         $.ajax({
             type: "POST",
             url: "/init",
             data: {
-                userId: loader.userId //"" or valid user id string
+                userId: loader.userId, //"" or valid user id string
+                isDriver: loader.isDriver //TODO
             },
             success: function (resp) {
+                //If has existing session, load it!
+
+
                 if (resp.isLoggedIn) {
                     loader.isDriver = resp.isDriver;
                     loader.userId = resp.userId;
@@ -374,21 +393,11 @@
                 }
                 else {
                     loader.userId = resp.userId;
+                    //TODO: if is driver, go to driver page and not shopper
                 }
-                window.setInterval(loader.getUpdates, 500);
-            }
-        });
-    }
 
-    function loadPage(pageName, row, column) {
-        $.ajax({
-            type: "POST",
-            url: "/loadPage",
-            data: {name: pageName},
-            async: false,
-            success: function (data) {
-                $('#section-' + row).append("<div id='" + pageName +
-                        "' data-x='" + column + "' data-y='" + row + "'>" + data + "</div>");
+
+                window.setInterval(loader.getUpdates, 500);
             }
         });
     }
