--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/css/normalize.css">
+    <!--<link rel="stylesheet" href="/css/normalize.css">-->
     <!--<link rel="stylesheet"-->
     <!--href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/4.0.1/bootstrap-material-design.min.css">css-->
     <link rel="stylesheet" href="/css/style.css">
