fixed the submit button on the driver page

--- a/_driverList2.html
+++ b/_driverList2.html
@@ -18,9 +18,9 @@
             <div class = "row">
                 <div class="col-xs-12">
                     <div class="driver-footer">
-                        <div id="_driver_footerInfo">
-                            <div id="_driver_numItems"></div>
-                            <button id="_driver_submit_list" type="button" class="btn btn-link">
+                        <div class ="row" id="_driver_footerInfo">
+                            <div class = "col-xs-4" id="_driver_numItems"></div>
+                            <button class="col-xs-4" id="_driver_submit_list" type="button" class="btn btn-link">
                                 submit
                             </button>
                         </div>
