fixed _shopping's submit button

--- a/_shopping.html
+++ b/_shopping.html
@@ -23,9 +23,9 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="todo-footer">
-                    <div id="footerInfo">
-                        <div id="numItems"></div>
-                        <button id="submit_list" type="button" class="btn btn-link">
+                    <div class = "row" id="footerInfo">
+                        <div class = "col-xs-4" id="numItems"></div>
+                        <button class = "col-xs-4" id="submit_list" type="button" class="btn btn-link">
                             Submit
                         </button>
                     </div>
