--- a/_driverList.html
+++ b/_driverList.html
@@ -1,32 +1,43 @@
-<div class="container text-center">
-    <div class="row">
-        <div class="col-xs-12">
-            <h1 id="listName">Gary's Shopping List</h1>
-            <p id="phone">Phone: 123-456-7890</p>
 
-            <ul id="driver-items"></ul>
+
+    <div class="container text-center" id="_driverList2_shopping">
+        <div class="row" >
+            <div class="col-xs-12">
+                <h2 id="listName"></h2>
+                <h3 id="phone"></h3>
+            </div>
         </div>
-        <p id="left"></p>
-        <button type="button" data-toggle="collapse" data-target="#dropdown1" class=" btn-block btn-primary btn-lg">
-            Special Notes<span class="caret"></span></button>
-    </div>
-</div>
-<div id="dropdown1" class="collapse row">
-    <div class="text-center">
-        <div class="col-xs-12"><input type="checkbox" class="check" value="cheap" id="cheap">Get the Cheapest one</div>
-        <div class="col-xs-12"><input type="checkbox" class="check" value="expensive" id="expensive">Get the most
-            expensive
-            one
+
+        <div class="container box">
+            <div class="row" >
+                <div class="col-xs-12">
+                    <ul id="_driverList2_list"></ul>
+                </div>
+            </div>
+
+            <div class = "row">
+                <div class="col-xs-12">
+                    <div class="driver-footer">
+                        <div id="_driver_footerInfo">
+                            <div id="_driver_numItems"></div>
+                            <div class="text-center">
+                                <button id="_driver_submit_list" type="button" class="btn btn-link">
+                                    submit
+                                </button>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-xs-12"><input type="checkbox" class="check" value="none" id="none">Don't get it</div>
-    </div>
-</div>
-<div class="row">
-    <div class="col-xs-12">
-        <button id="ready" type="button" class="btn-block">Ready For shipping!</button>
-    </div>
-</div>
 
+        <div class ="footerBars">
+            <div class="footer2"></div>
+            <div class="footer3"></div>
+        </div>
 
-<script type="text/javascript" src="/js/_driverList.js"></script>
+    </div>
+
+<script src="js/_driverList.js"></script>
 
