--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
     function goToPage(id, noPrevious) {
         if (id.length) {
             if (arguments.length > 1) {
-                //loader.setCurrentPage(id, true);
+                loader.setCurrentPage(id, true);
             }
             else {
-                //loader.setCurrentPage(id, false);
+                loader.setCurrentPage(id, false);
             }
-            loader.goToPage(id);
+            //loader.goToPage(id);
             /*Temporary*/
         }
     }
@@ -98,8 +98,8 @@
         isLoggedIn: false,
         userId: "",
         pageCount: 0,
-        previousPage: "",
-        currentPage: "",
+        previousPage: "_homePage",
+        currentPage: "_homePage",
         currentPageObject: {
             getData: null,
             loadData: null,
