--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         </header>
         <div class="cd-panel-content">
             <div id="Butt">
-                <div class="toggle-button">
+                <nav class="toggle-button">
                     <button></button>
-                </div>
+                </nav>
             </div>
         </div>
     </div>
