--- a/_history.html
+++ b/_history.html
@@ -1,7 +1,7 @@
 <div id="_history">
     <div class="row">
         <div class="col-xs-12">
-            <h2 class="text-center">Your Orders</h2>
+            <h2 class="text-center">Your Deliveries</h2>
             <div class="container text-center">
 
                 <div class="row" style="margin-bottom: 3%">
@@ -18,7 +18,6 @@
                         <div class="footer3"></div>
                     </div>
                 </div>
-
                 <div class="row" style="margin-bottom: 3%">
                     <div class="container box">
                         <div class="row">
@@ -48,7 +47,6 @@
                         <div class="footer3"></div>
                     </div>
                 </div>
-
                 <div class="row" style="margin-bottom: 3%">
                     <div class="container box">
                         <div class="row">
@@ -65,10 +63,7 @@
                 </div>
             </div>
         </div>
-
     </div>
 </div>
 
-<script>
-</script>
-
+<script src = "/js/_history.js"></script>
