--- a/_history.html
+++ b/_history.html
@@ -1,7 +1,7 @@
 <div id="_history">
     <div class="row">
         <div class="col-xs-12">
-            <h2 class="text-center">Your Deliveries</h2>
+            <h2 class="text-center">Your Orders</h2>
             <div class="container text-center">
 
                 <div class="row" style="margin-bottom: 3%">
