changed the tickets page market buttons

--- a/_tickets.html
+++ b/_tickets.html
@@ -1,4 +1,4 @@
-<div id="tickets">
+<div class= "text-center" id="tickets">
 
     <div class="container text-center">
         <div class="row">
@@ -7,22 +7,22 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-xs-12">
-                <ul id="buttons" class="col-xs-12">
-                    <li class="col-xs-3">
-                        <h4><div data-name="ralphs" class="store">Ralph's</div></h4>
-                    </li>
-                    <li class="col-xs-3">
-                        <h4><div data-name="tjs" class="store">TJ's</div></h4>
-                    </li>
-                    <li class="col-xs-3">
-                        <h4><div data-name="wholeFoods" class="store">WholeFoods</div></h4>
-                    </li>
-                    <li class="col-xs-3">
-                        <h4><div data-name="vons" class="store">Vons</div></h4>
-                    </li>
-                </ul>
+        <div class="row marketButtons text-center">
+
+            <div class="store col-xs-6 col-sm-3 selected" data-name="ralphs">
+                <h4>RALPHS</h4>
+            </div>
+
+            <div class="store col-xs-6 col-sm-3 selected" data-name="tjs">
+                <h4>TJ's</h4>
+            </div>
+
+            <div class="store col-xs-6 col-sm-3 selected" data-name="wholeFoods">
+                <h4>WholeFoods</h4>
+            </div>
+
+            <div class="store col-xs-6 col-sm-3 selected" data-name="vons">
+                <h4>VONS</h4>
             </div>
         </div>
     </div>
