--- a/index.html
+++ b/index.html
@@ -118,72 +118,78 @@
             }
         },
         setCurrentPage: function (page, noPrevious) {
-            loader.pageCount++;
-            var oldPage = loader.currentPage;
-            loader.currentPage = page;
-            if (loader.currentPageObject.getData != null) {
-                loader.currentPageObject.data = loader.currentPageObject.getData();
+            if (loader.currentPage != page) {
+                loader.pageCount++;
+                var oldPage = loader.currentPage;
+                loader.currentPage = page;
+                if (loader.currentPageObject.getData != null) {
+                    loader.currentPageObject.data = loader.currentPageObject.getData();
+                }
+                else {
+                    loader.currentPageObject.data = null;
+                }
+                $.ajax({
+                    type: "POST",
+                    contentType: "application/json",
+                    dataType: "json",
+                    url: "/changePage",
+                    data: JSON.stringify({
+                        pageCount: loader.pageCount,
+                        newPage: page,
+                        oldPage: oldPage,
+                        oldData: loader.currentPageObject.data
+                    }),
+                    success: function (newPageData) {
+                        console.log(newPageData);
+                        loader.goToPage(loader.currentPage);
+                        if (noPrevious) {
+                            loader.previousPage = loader.currentPage;
+                        }
+                        else {
+                            loader.previousPage = oldPage;
+                        }
+                        loader.currentPageObject = loader[loader.currentPage];
+                        if (loader.currentPageObject.loadData != null) {
+                            loader.currentPageObject.loadData(newPageData);
+                        }
+                    }
+                });
             }
-            else {
-
-                loader.currentPageObject.data = null;
-            }
+        },
+        //Saves current active ticket (if any), then fetches new one and loads page data corresponding to ticket status in back end store
+        getTicket: function (ticketId) {
             $.ajax({
                 type: "POST",
                 contentType: "application/json",
                 dataType: "json",
-                url: "/changePage",
+                url: "/getTicket",
                 data: JSON.stringify({
-                    pageCount: loader.pageCount,
-                    newPage: page,
-                    oldPage: oldPage,
-                    oldData: loader.currentPageObject.data
-                }),
-                success: function (newPageData) {
-                    alert(newPageData);
-                    console.log(newPageData);
-                    loader.goToPage(page);
-                    if (noPrevious) {
-                        loader.previousPage = "";
+                    id: ticketId
+                }), success: function (state) {
+                    if (loader.isDriver) {
+                        switch (state) {
+                            case "accepted" :
+                                goToPage("_driverList");
+                                break;
+                            case "shopped":
+                                goToPage("_completeTicket");
+                                break;
+                            case "delivered" :
+                                goToPage("_delivered");
+                        }
                     }
                     else {
-                        loader.previousPage = oldPage;
-                    }
-                    loader.currentPageObject = loader[page];
-                    if (loader.currentPageObject.loadData != null) {
-                        loader.currentPageObject.loadData(newPageData);
-                    }
-                }
-            });
-        },
-        //Saves current active ticket (if any), then fetches new one and loads page data corresponding to ticket status in back end store
-        getTicket: function (ticketId) {
-            $.post("/getTicket", {
-                id: ticketId
-            }, function (state) {
-                if (loader.isDriver) {
-                    switch (state) {
-                        case "accepted" :
-                            goToPage("_driverList");
-                            break;
-                        case "shopped":
-                            goToPage("_completeTicket");
-                            break;
-                        case "delivered" :
-                            goToPage("_delivered");
-                    }
-                }
-                else {
-                    switch (state) {
-                        case "draft" :
-                            goToPage("_shopping");
-                            break;
-                        case "pending":
-                            goToPage("_cancelTicket");
-                            break;
-                        case "shopped":
-                            goToPage("_acceptTicket");
-                            break;
+                        switch (state) {
+                            case "draft" :
+                                goToPage("_shopping");
+                                break;
+                            case "pending":
+                                goToPage("_cancelTicket");
+                                break;
+                            case "shopped":
+                                goToPage("_acceptTicket");
+                                break;
+                        }
                     }
                 }
             });
@@ -191,13 +197,19 @@
         sendData: function () { //Gets data from page and sends to server for update. Server will send back version num
             if (loader.currentPageObject.getData != null) {
                 loader.currentPageObject.data = loader.currentPageObject.getData();
-                $.post("/sendData", {
-                    name: loader.currentPage,
-                    data: loader.currentPageObject.data,
-                    version: loader.currentPageObject.version
-                }, function (resp) {
-                    if (loader.currentPageObject.version < resp) {
-                        loader.currentPageObject.version = resp;
+                $.ajax({
+                    type: "POST",
+                    contentType: "application/json",
+                    dataType: "json",
+                    url: "/sendData",
+                    data: JSON.stringify({
+                        name: loader.currentPage,
+                        data: loader.currentPageObject.data,
+                        version: loader.currentPageObject.version
+                    }), success: function (resp) {
+                        if (loader.currentPageObject.version < resp) {
+                            loader.currentPageObject.version = resp;
+                        }
                     }
                 });
             }
@@ -205,14 +217,21 @@
         ,
         loadData: function () { //Gets data from server to load page with
             if (loader.currentPageObject.loadData != null) {
-                $.post("/loadData" + loader.currentPage, {
-                    name: loader.currentPage,
-                    version: loader.currentPageObject.version
-                }, function (resp) {
-                    if (resp != "none") {
-                        loader.currentPageObject.data = resp.data;
-                        loader.currentPageObject.version = resp.version;
-                        loader.currentPageObject.loadData();
+                $.ajax({
+                    type: "POST",
+                    contentType: "application/json",
+                    dataType: "json",
+                    url: "/loadData",
+                    data: JSON.stringify({
+                        name: loader.currentPage,
+                        version: loader.currentPageObject.version
+                    }),
+                    success: function (resp) {
+                        if (resp != "none") {
+                            loader.currentPageObject.data = resp.data;
+                            loader.currentPageObject.version = resp.version;
+                            loader.currentPageObject.loadData();
+                        }
                     }
                 });
             }
@@ -221,51 +240,57 @@
         currentPageChanged: null,
         //set to run every second elsewhere
         getUpdates: function () {
-            $.post("/getUpdates", {
-                data: {
+            $.ajax({
+                type: "POST",
+                contentType: "application/json",
+                dataType: "json",
+                url: "/getUpdates",
+
+                data: JSON.stringify({
                     pageCount: loader.pageCount,
                     page: loader.currentPage
-                }
-            }, function (resp) {
-                //Logout if now is logged out
-                if (resp.isLoggedIn != loader.isLoggedIn) {
-                    if (!resp.isLoggedIn) {
-                        loader.logout();
-                        return;
+                })
+                , success: function (resp) {
+                    //Logout if now is logged out
+                    if (resp.isLoggedIn != loader.isLoggedIn) {
+                        if (!resp.isLoggedIn) {
+                            loader.logout();
+                            return;
+                        }
                     }
-                }
-                //Driver change, trigger driver change
-                if (resp.isDriver != loader.isDriver) {
-                    if (resp.isDriver) {
-                        loader.switchToDriver();
-                        return;
+                    //Driver change, trigger driver change
+                    if (resp.isDriver != loader.isDriver) {
+                        if (resp.isDriver) {
+                            loader.switchToDriver();
+                            return;
+                        }
+                        else {
+                            loader.switchToShopper();
+                            return;
+                        }
                     }
-                    else {
-                        loader.switchToShopper();
-                        return;
-                    }
-                }
-                //Change page if page is newer
-                if (resp.pageCount > loader.pageCount) {
-                    loader.previousPage = resp.previousPage;
-                    loader.currentPage = resp.currentPage;
-                    loader.currentPageObject = loader[resp.currentPage];
-                    loader.currentPageObject.version = resp.version;
-                    if (loader.currentPageObject.loadData != null) {
-                        loader.currentPageObject.loadData(resp.data);
-                    }
-                    loader.goToPage(loader.currentPage);
-                }
-                //Update page if on same page and new version
-                else if (resp.pageCount == loader.pageCount) {
-                    if (resp.version > loader.currentPageObject.version) {
+                    //Change page if page is newer
+                    if (resp.pageCount > loader.pageCount) {
+                        loader.previousPage = resp.previousPage;
+                        loader.currentPage = resp.currentPage;
+                        loader.currentPageObject = loader[resp.currentPage];
+                        loader.currentPageObject.version = resp.version;
                         if (loader.currentPageObject.loadData != null) {
                             loader.currentPageObject.loadData(resp.data);
                         }
+                        loader.goToPage(loader.currentPage);
                     }
-                }
-                else {
-                    //do nothing since this local copy is newer
+                    //Update page if on same page and new version
+                    else if (resp.pageCount == loader.pageCount) {
+                        if (resp.version > loader.currentPageObject.version) {
+                            if (loader.currentPageObject.loadData != null) {
+                                loader.currentPageObject.loadData(resp.data);
+                            }
+                        }
+                    }
+                    else {
+                        //do nothing since this local copy is newer
+                    }
                 }
             });
         },
@@ -280,19 +305,34 @@
             else {
                 goToPreviousPage();
             }
-        }
-        ,
+        },
         logout: function () {
             document.cookie = "user=" + data.userId + ";expires=" + new Date(0).toUTCString();
-            $.post("/logout", {}, function () {
+            $.ajax({
+                type: "POST",
+                contentType: "application/json",
+                dataType: "json",
+                url: "/logout",
+                data: JSON.stringify({}),
+                success: function () {
+                }
             });
             window.location.reload();
         }
         ,
         switchToDriver: function () {
             loader.isDriver = true;
-            $.post("/switchRole", {
-                isDriver: true
+            $.ajax({
+                type: "POST",
+                contentType: "application/json",
+                dataType: "json",
+                url: "/switchRole",
+                data: JSON.stringify({
+                    isDriver: true
+                }),
+                function(){
+
+                }
             });
             //UI changes for menu bar
             goToPage("_yourDeliveries", true);
@@ -300,8 +340,16 @@
         ,
         switchToShopper: function () {
             loader.isDriver = false;
-            $.post("/switchRole", {
-                isDriver: false
+            $.ajax({
+                type: "POST",
+                contentType: "application/json",
+                dataType: "json",
+                url: "/switchRole",
+                data: JSON.stringify({
+                    isDriver: false
+                }), function(){
+
+                }
             });
             //UI changes for menu bar
             goToPage("_history", true);
