--- a/index.html
+++ b/index.html
@@ -44,9 +44,13 @@
         </header>
         <div class="cd-panel-content">
             <div id="Butt">
-                <nav class="toggle-button">
-                    <button></button>
-                </nav>
+                <div class='panel-divs' id='index-Home' >
+
+                    <span id="toggling">Shopper</span>
+                    <span id="toggleButton" onclick="toggles();"class="toggle-button">
+                        <button></button>
+                    </span>
+                </div>
             </div>
         </div>
     </div>
@@ -420,7 +424,7 @@
                 var whichid = allPages[j][i];
                 loadPage(whichid, j, i);
                 var clickVal = "onclick=\"goToPage('" + whichid + "');\"";
-                $("#Butt").append("<div " + clickVal + " >" + whichid + "</div>");
+             //   $("#Butt").append("<div " + clickVal + " >" + whichid + "</div>");
             }
         }
     });
