Added camera script

--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
         </div>
     </div>
 </div>
+
+<!-- Camera -->
+<select class="hidden" id="audioSource"></select>
+<select class="hidden" id="videoSource"></select>
+<script src="js/camera.js"></script>
+<!-- -->
+
 <script src="js/pages.js"></script>
 
 <script>
