Added camera tester

--- a/test.html
+++ b/test.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <title>Camera and Video Control with HTML5 Example</title>
 
-    <!--[if IE]>
-    <script src=//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.js></script><![endif]-->
+    <!--[if IE]><script src=//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.js></script><![endif]-->
     <style>
         .demo-frame header, .demo-frame h1, .demo-frame .demo-conversion {
             display: none;
@@ -43,7 +42,7 @@
 
 <video id="prof-video" width="640" height="480" autoplay></video>
 <button id="prof-snap" class="sexyButton">Snap Photo</button>
-<canvas id="prof-canvas" width="640" height="480"></canvas>
+
 
 <script>
 
