--- a/test2.html
+++ b/test2.html
@@ -1,5 +1,29 @@
 
-<select class="hidden" id="audioSource"></select>
-<select class="hidden" id="videoSource"></select>
-<video id="video1" muted autoplay></video>
+<select class="hidden" style="display: none" id="videoSource"></select>
+
 <script src="js/camera.js"></script>
+
+<video id="video1" width="800" height="600" muted autoplay></video>
+<canvas id="canvas1" width="800" height="600"></canvas>
+<a id="button" download="file.png">Download</a>
+<script>
+
+    var vvv = document.getElementById("video1");
+    enableCamera(vvv, 0);
+
+    var canvas = document.getElementById("canvas1");
+    var context = canvas.getContext("2d");
+
+    vvv.addEventListener("click", function () {
+        context.drawImage(videoElement, 0, 0, 800, 600);
+        aaa.href = canvas.toDataURL("image/png").replace("image/png", "image/octet-stream");
+    });
+
+    var aaa = document.getElementById("button");
+
+
+    // Converts canvas to an image
+
+
+
+</script>
